# CantoneseLearner

./: analysis_page.py  app.py  app_old.py  character_analyzer.py  database_status_page.py  file_parsers.py  file_tracker.py  learning_tracker.py  mongodb_config.py  mongodb_file_tracker.py  mongodb_learning_tracker.py  mongodb_user_database.py  pronunciation_analyzer.py  pyproject.toml  replit.md  user_database.py  word_analyzer.py
data/: files.json  users.json
