[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ebooklib>=0.19",
    "html2text>=2025.4.15",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "plotly>=6.2.0",
    "pypdf2>=3.0.1",
    "streamlit>=1.46.1",
]
