[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ebooklib>=0.19",
    "hanzidentifier>=1.3.0",
    "html2text>=2025.4.15",
    "jieba>=0.42.1",
    "motor>=3.7.1",
    "notion-client>=2.4.0",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "plotly>=6.2.0",
    "pycantonese>=3.4.0",
    "pymongo>=4.13.2",
    "pypdf2>=3.0.1",
    "streamlit>=1.46.1",
]
